tests/paczka2/big_fuzzy/84361158.err
Error in line 2: zSn A713 89,7
Error in line 6: eAp34 S972 78,6
Error in line 10: eAp34 S671 21,6
Error in line 18: zSn S248 70,7
Error in line 13: ypM S248 166,0
Error in line 27: S248 S671 59,2
Error in line 48: WfX S671 60,7
Error in line 56: WfX S248 25,79
Error in line 57: zSn S671 77,4
Error in line 64: zSn S248 11,3
Error in line 59: S248 S248 57,2
Error in line 62: acZ S248 0,4
Error in line 67: zSn A713 42,3
Error in line 76: acZ A713 55,7
Error in line 83: 2qHkJN S248 27,8
Error in line 95: 2qHkJN A713 64,3
Error in line 84: WfX S972 64,2
Error in line 103: acZ S671 51,1
Error in line 104: acZ S248 83,7
Error in line 113: eAp34 S248 31,8
Error in line 128: WfX S972 61,5
Error in line 127: eAp34 A713 10,0
Error in line 139: eAp34 S972 84,76
Error in line 137: eAp34 S248 77,7
Error in line 149: eAp34 S972 9,5
Error in line 155: WfX S248 -1,9
Error in line 166: eAp34 S671 80,5
Error in line 178: 2qHkJN S671 95,68
Error in line 168: eAp34 S24 4,5
Error in line 179: eAp34 S248 26,4
Error in line 164: acZ S248 54,4
Error in line 153: WfX S248 1,6
Error in line 214: acZ.A713.12,3
Error in line 217: ?zS
Error in line 215: S248 A713 58,1
Error in line 208: acZ S972 189,5
Error in line 221: acZ A713 10,6
Error in line 226: eAp34 S972 14,5
Error in line 228: eAp34 S671 7,5
Error in line 227: S248 S248 1,5
Error in line 240: acZ S671 -2,1
Error in line 241: S248 A713 153,3
Error in line 225: acZ S671 94,2
Error in line 243: acZ S248 11,8
Error in line 237: WfX S972 91,7
Error in line 247: WfX S671 58,9
Error in line 242: S248 S671 23,0
